# Languages

Go/GoSample/: ChatGo.md  Go Output.log.txt  GoExplained.md  INSTALL.md  README.md  VALIDATION.md  go.mod  install-and-run.ps1  main.go  run.bat  setup.ps1
Rust/SampleRust/: Cargo.toml  ChatLog.md  Prompts - Rust.txt  README.md  Rust Install Notes.txt  RustExplained.md  run_demo.bat  run_demo.sh
Rust/SampleRust/src/: common_errors.rs  llm_integration.rs  main.rs
